@@ -1,0 +1,4 @@
+Import excel files into R. Supports '.xls' via the embedded 'libxls' C
+library <https://github.com/evanmiller/libxls> and '.xlsx' via the
+embedded 'RapidXML' C++ library <http://rapidxml.sourceforge.net>.
+Works on Windows, Mac and Linux without external dependencies.
