@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3125 2019/07/31 13:53:41 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3126 2019/07/31 13:55:05 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5082,3 +5082,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-openxlsx version 4.1.0.1 [brook 2019-07-31]
 	Added textproc/R-readr version 1.3.1 [brook 2019-07-31]
 	Added textproc/R-readstata13 version 0.9.2 [brook 2019-07-31]
+	Added textproc/R-readxl version 1.3.1 [brook 2019-07-31]
